; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/host/extr_xhci-mem.c_xhci_segment_free.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/host/extr_xhci-mem.c_xhci_segment_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xhci_hcd = type { i32 }
%struct.xhci_segment = type { i32*, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.xhci_hcd*, %struct.xhci_segment*)* @xhci_segment_free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @xhci_segment_free(%struct.xhci_hcd* %0, %struct.xhci_segment* %1) #0 {
  %3 = alloca %struct.xhci_hcd*, align 8
  %4 = alloca %struct.xhci_segment*, align 8
  store %struct.xhci_hcd* %0, %struct.xhci_hcd** %3, align 8
  store %struct.xhci_segment* %1, %struct.xhci_segment** %4, align 8
  %5 = load %struct.xhci_segment*, %struct.xhci_segment** %4, align 8
  %6 = getelementptr inbounds %struct.xhci_segment, %struct.xhci_segment* %5, i32 0, i32 0
  %7 = load i32*, i32** %6, align 8
  %8 = icmp ne i32* %7, null
  br i1 %8, label %9, label %22

9:                                                ; preds = %2
  %10 = load %struct.xhci_hcd*, %struct.xhci_hcd** %3, align 8
  %11 = getelementptr inbounds %struct.xhci_hcd, %struct.xhci_hcd* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load %struct.xhci_segment*, %struct.xhci_segment** %4, align 8
  %14 = getelementptr inbounds %struct.xhci_segment, %struct.xhci_segment* %13, i32 0, i32 0
  %15 = load i32*, i32** %14, align 8
  %16 = load %struct.xhci_segment*, %struct.xhci_segment** %4, align 8
  %17 = getelementptr inbounds %struct.xhci_segment, %struct.xhci_segment* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 8
  %19 = call i32 @dma_pool_free(i32 %12, i32* %15, i32 %18)
  %20 = load %struct.xhci_segment*, %struct.xhci_segment** %4, align 8
  %21 = getelementptr inbounds %struct.xhci_segment, %struct.xhci_segment* %20, i32 0, i32 0
  store i32* null, i32** %21, align 8
  br label %22

22:                                               ; preds = %9, %2
  %23 = load %struct.xhci_segment*, %struct.xhci_segment** %4, align 8
  %24 = call i32 @kfree(%struct.xhci_segment* %23)
  ret void
}

declare dso_local i32 @dma_pool_free(i32, i32*, i32) #1

declare dso_local i32 @kfree(%struct.xhci_segment*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
